# lamoom-cicd

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  test_cicd.py
.github/: pull_request_template.md
.github/workflows/: publish.yml  run-unit-tests.yml
examples/: example_ci_cd.ipynb  generate_test.ipynb  getting_started_notebook.ipynb  test_multiple_runs.ipynb
lamoom_cicd/: __init__.py  responses.py  test_llm_response.py  utils.py
lamoom_cicd/prompts/: prompt_compare_results.py  prompt_generate_facts.py
tests/: conftest.py  test_cicd.py  test_csv_visualize.py  test_data.csv  test_multiple_runs.py
